# sardinOSme

./: .Mo.swp  .replit  CAN_Handler.py  CAN_Handler.py.save  CAN_Handler_Serial.py  CAN_test.py  ControlProfile.py  EM.py  GUI.py  Gamepad.py  Gamepad.py.save  Gripper.py  Joystick.py  Joystick_backup.py  Launch.py  Led.py  Logger.py  LoggerConfig.yaml  Module_Base.py  Module_Base_Async.py  Module_Loader.py  Move_Forward.py  Pygame_Joystick.py  README.md  Socket_Client.py  Socket_Server.py  Test.py  Thruster.yaml  Thruster.yaml.save  Thruster_Hydron.yaml  Thruster_Power.py  Thrusters.py  Thrusters_Loader.py  clientconfig.yaml  config.yaml  config.yaml.save  config.yaml.save.2  gamepad.py  lights.py  main.py  (+4 more)
GUI/: axis.py  axis2.py  bar.py  bar2.py  label.py  main.py  plot.py  plot2.py  popup.py  profile.py  widget.py
TestPrograms/: BinaryConcatenate.py  FactoryPattern.py  InputsGamepad.py  RemoveInList.py  RunTime.py  Thrusters_Loader.py  ValueMappping.py  thrusterControl.py
venv32/Scripts/: Activate.ps1  activate  activate.bat
venv64/Scripts/: Activate.ps1  activate.bat  futurize-script.py  pasteurize-script.py
