[tool.poetry]
name = "repl_python3_SardineOS"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
importlib-metadata = "^2.0.0"
inputs = "^0.5"
pubsub = "^0.1.2"
pypubsub = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
